--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,16 +3,8 @@
 name: CI
 
 # Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+on: [push]
+ 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -24,9 +16,21 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Set up python 3.5
+        uses: actions/setup-python@v1
+        with: 
+            python-version:3.5
 
       # Runs a single command using the runners shell
-      - name: Run make command
-        run: make hello
+      - name: Install dependencies
+        run: |
+          make install
+      - name: Lint with pylint
+        run: |
+         make lint
+      - name: Lint with pytest
+        run: |
+         make test
+      
 
      
