--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-      - name: Set up python 3.5
+      - name: Set up Python 3.5
         uses: actions/setup-python@v1
-        with: 
-            python-version:3.5
+        with:
+          python-version: 3.5
 
       # Runs a single command using the runners shell
       - name: Install dependencies
